# delta

./: .gitattributes  .gitignore  .mailmap  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.config/githooks/: pre-commit
.config/jetbrains/: Build Workspace.run.xml  Doc Test.run.xml  Examples Image Classification CIFAR-10.run.xml  Examples Image Classification Mnist.run.xml
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  design_considerations.md
.github/workflows/: cargo_update.yml  core.yml  github_actions_update.yaml  machete.yml  release.yml
delta/: Cargo.toml
delta/src/: lib.rs
delta/src/activations/: gelu.rs  leaky_relu.rs  mod.rs  prelu.rs  relu.rs  softmax.rs
delta/src/classical/: classification.rs  dimensionality_reduction.rs  mod.rs
delta/src/classical_ml/: activations.rs  algorithms.rs  classification.rs  clustering.rs  losses.rs  mod.rs  optimizers.rs  regression.rs
delta/src/common/: activation.rs  data.rs  error.rs  layer.rs  loss.rs  mod.rs  optimizer.rs  shape.rs  tensor_ops.rs
delta/src/common/errors/: layer_error.rs  mod.rs  model_error.rs  optimizer_error.rs
delta/src/data/: cifar10.rs  imagenet_v2.rs  mnist.rs  mod.rs  test_dataset.rs
delta/src/dataset/: base.rs  mod.rs
delta/src/dataset/image/: cifar10.rs  cifar100.rs  custom.rs  imagenet_v2.rs  mnist.rs  mod.rs  test_dataset.rs
delta/src/deep_learning/: activations.rs  encoders.rs  errors.rs  gradient_projector.rs  layers.rs  losses.rs  mod.rs  models.rs  optimizers.rs  tensor_ops.rs  utils.rs
delta/src/deep_learning/dataset/: base.rs  mod.rs
delta/src/deep_learning/dataset/image/: cifar10.rs  cifar100.rs  imagenet_v2.rs  mnist.rs  test_dataset.rs
delta/src/deep_learning/dataset/vision/: cifar10.rs  cifar100.rs  imagenet_v2.rs  mnist.rs  mod.rs  test_dataset.rs
delta/src/devices/: mod.rs  osx_metal.rs
delta/src/devices/metal_shaders/: tensor_ops.metal
delta/src/encoders/: mod.rs  one_hot_encode.rs
delta/src/losses/: cross_entropy.rs  huber.rs  mean_absolute_error.rs  mean_squared.rs  mod.rs  sparse_categorical_cross_entropy.rs
delta/src/neuralnet/: functional.rs  layers.rs  mod.rs  models.rs
delta/src/neuralnet/layers/: conv2d.rs  conv_1d.rs  conv_2d.rs  dense.rs  error.rs  flatten.rs  max_pooling_2d.rs  mod.rs
delta/src/neuralnet/models/: error.rs  mod.rs  sequential.rs
delta/src/nn/: layers.rs
delta/src/optimizers/: ada_delta.rs  ada_grad.rs  adam.rs  error.rs  gradient_descent.rs  mini_batch_gd.rs  mod.rs  rms_prop.rs  sgd.rs  sgd_momentum.rs
delta/src/utils/: mod.rs  number_format.rs
delta_activations/: Cargo.toml
delta_activations/src/: lib.rs  relu.rs  softmax.rs
delta_bench/: Cargo.toml  README.md
delta_bench/src/: adam_benchmark.rs  benchmark.rs  lib.rs  main.rs
delta_bench/src/optimizers/: ada_delta_benchmark.rs  ada_grad_benchmark.rs  adam_benchmark.rs  gradient_descent_benchmark.rs  mini_batch_gd_benchmark.rs  rms_prop_benchmark.rs  sgd_benchmark.rs  sgd_momentum_benchmark.rs
delta_common/: Cargo.toml
delta_common/src/: activation.rs  data.rs  errors.rs  layer.rs  lib.rs  loss.rs  optimizer.rs  shape.rs  tensor_ops.rs
delta_core/: Cargo.toml
delta_core/src/: data.rs  errors.rs  layer.rs  lib.rs  shape.rs  tensor_ops.rs
delta_data/: Cargo.toml
delta_data/src/: lib.rs  mnist.rs
delta_losses/: Cargo.toml
delta_losses/src/: lib.rs  mean_squared.rs
delta_nn/: Cargo.toml
delta_nn/src/: layers.rs  lib.rs  models.rs
delta_nn/src/layers/: dense.rs  mod.rs  relu.rs
delta_nn/src/models/: sequential.rs
delta_optimizers/: Cargo.toml
delta_optimizers/src/: adam.rs  lib.rs
delta_tensor/: Cargo.toml
delta_tensor/src/: lib.rs
examples/classical/linear_regression/: Cargo.toml
examples/classical/linear_regression/src/: main.rs
examples/classical/logistic_regression/: Cargo.toml
examples/classical/logistic_regression/src/: main.rs
examples/classical_ml/decision-trees/: Cargo.toml
examples/classical_ml/linear_regression/src/: main.rs
examples/classical_ml/logistic_regression/: Cargo.toml
examples/classical_ml/logistic_regression/src/: main.rs
examples/deep_learning/cifar10/: Cargo.toml
examples/deep_learning/cifar10/src/: main.rs
examples/deep_learning/cifar100/: Cargo.toml
examples/deep_learning/cifar100/src/: main.rs
examples/deep_learning/imagenet_v2/: Cargo.toml
examples/deep_learning/imagenet_v2/src/: main.rs
examples/deep_learning/mnist/: Cargo.toml
examples/deep_learning/mnist/src/: main.rs
examples/image_classification/cifar10/: Cargo.toml
examples/image_classification/cifar10/src/: main.rs
examples/image_classification/cifar100/: Cargo.toml
examples/image_classification/cifar100/src/: main.rs
examples/image_classification/custom/: Cargo.toml
examples/image_classification/custom/src/: main.rs
examples/image_classification/imagenet_v2/: Cargo.toml
examples/image_classification/imagenet_v2/src/: main.rs
examples/image_classification/mnist/: Cargo.toml
examples/image_classification/mnist/src/: main.rs
examples/mnist/: Cargo.toml
examples/mnist/src/: main.rs
examples/slp_binary_classification/: Cargo.toml
