[workspace]
members = [
    "delta",
    "delta_bench",
    "examples/deep_learning/cifar100",
    "examples/deep_learning/cifar10",
    "examples/deep_learning/mnist",
    "examples/deep_learning/imagenet_v2",
    "examples/classical_ml/linear_regression",
    "examples/classical_ml/logistic_regression", "examples/classical_ml/decision-trees",

]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[workspace.dev-dependencies]
flamegraph = "0.6.6"
