[package]
name = "deltaml"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>", "Chase Willden <chase.willden@gmail.com>"]
description = "Activation functions."
license = "BSD-3-Clause"
documentation = "https://docs.rs/delta/latest/delta/"
repository = "https://github.com/delta-rs/delta"
readme = "../README.md"
rust-version = "1.81.0"
homepage = "https://github.com/delta-rs"
keywords = ["machine-learning", "ml", "framework"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { workspace = true, features = ["full"] }
rand = "0.8.5"
flate2 = "1.0.35"
log = "0.4.22"
reqwest = "0.12.9"
ndarray = "0.16.1"
approx = "0.5.1"
tar = "0.4.43"
