[package]
name = "deltaml"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>", "Chase Willden <chase.willden@gmail.com>"]
description = "An Open-Source Machine Learning Framework in Rust Δ"
license = "BSD-3-Clause"
documentation = "https://docs.rs/deltaml/latest/deltaml/"
repository = "https://github.com/blackportal-ai/delta"
readme = "../README.md"
rust-version = "1.83.0"
homepage = "https://blackportal.ai"
keywords = ["machine-learning", "ml", "framework"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
tokio = { workspace = true, features = ["full"] }
rand = "0.8.5"
flate2 = "1.0.35"
log = "0.4.22"
reqwest = "0.12.9"
ndarray = "0.16.1"
tar = "0.4.43"
serde_json = "1.0.133"
walkdir = "2.5.0"
image = "0.25.5"
serial_test = "3.2"
rand_distr = "0.4.3"
libm = "0.2.11"
rayon = "1.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.30.0", optional = true }

[features]
default = []
metal = ["dep:metal"]

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
