[package]
name = "delta_bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
deltaml = { path = "../delta", features = [ "metal" ] }
criterion = "0.5.1"
rand = "0.8.5"

# We need to specify this for every single benchmark we want to run
# This is a bit annoying, but it's the only way to get the benchmarks to run
[[bench]]
name = "adam_benchmark"
harness = false
path = "src/optimizers/adam_benchmark.rs"

[[bench]]
name = "ada_delta_benchmark"
harness = false
path = "src/optimizers/ada_delta_benchmark.rs"
