[package]
name = "delta_common"
version = "0.1.0"
edition = "2021"
authors = ["Marcus Cvjeticanin <mjovanc@icloud.com>", "Chase Willden <chase.willden@gmail.com>"]
description = "Common library (shared utilities, abstractions, base ML constructs)."
license = "BSD-3-Clause"
documentation = "https://docs.rs/delta/latest/delta/"
repository = "https://github.com/delta-rs/delta"
readme = "../README.md"
rust-version = "1.81.0"
homepage = "https://github.com/delta-rs"
keywords = ["machine-learning", "ml", "framework"]
publish = false

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
