[package]
name = "mnist"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
delta_common = { path = "../../delta_common" }
delta_data = { path = "../../delta_data" }
delta_nn = { path = "../../delta_nn" }
delta_tensor = { path = "../../delta_tensor" }
delta_optimizers = { path = "../../delta_optimizers" }
delta_losses = { path = "../../delta_losses" }
delta_activations = { path = "../../delta_activations" }
tokio = { version = "1.32.0", features = ["full"] }